signup by user information

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "connect-mongo": "^3.1.2",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
