--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 CLIENT_GOOGLE_ID = 447455559833-ljk9u5g2l127si0dh4g7lp1mvb59ojli.apps.googleusercontent.com
 CLIENT_GOOGLE_SECRET = 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
+FACEBOOK_APP_ID = 395567308810556
+FACEBOOK_APP_SECRET = a71fd46f854332a4e696a3202ca2fefd
 DB_CONNECT = mongodb+srv://root:n12@cluster0.g7g2z.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
