--- a/.env
+++ b/.env
@@ -2,4 +2,6 @@ CLIENT_GOOGLE_ID = 447455559833-ljk9u5g2l127si0dh4g7lp1mvb59ojli.apps.googleuser
 CLIENT_GOOGLE_SECRET = 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
 FACEBOOK_APP_ID = 395567308810556
 FACEBOOK_APP_SECRET = a71fd46f854332a4e696a3202ca2fefd
+AUTH_USER_EMAIL = s12029192@stu.najah.edu
+AUTH_USER_PASS = Noor@Noor123456
 DB_CONNECT = mongodb+srv://root:n12@cluster0.g7g2z.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
