--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "mongoose": "^6.2.3",
+    "nodemailer": "^6.7.3",
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0"
