Reset password & some changes

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ FACEBOOK_APP_SECRET = 9399ad7c48b9e5ce43b3da9d5044e8b9
 AUTH_USER_EMAIL = s12029192@stu.najah.edu
 AUTH_USER_PASS = Noor@Noor123456
 DB_CONNECT = mongodb+srv://root:n12@cluster0.g7g2z.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+JWT_TOKEN = secretoken123
+CLIENT_URL = http://localhost:5000
