--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
+    "multer": "^1.4.4",
     "nodemailer": "^6.7.3",
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
